--- a/index.html
+++ b/index.html
@@ -4,20 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/udemy/CSS/style.css">
   <title>Document</title>
 </head>
 <body>
-  <P>hello!!!</P>
-  <P>hello!!!</P>
-  <P>hello!!!</P>
-  <P>hello!!!</P>
-  <P>hello!!!</P>
-  <P>hello!!!</P>
-  <P>hello!!!</P>
-  <P>hello!!!</P>
-  <P>hello!!!</P>
-  <P>hello!!!</P>
-  <P>hello!!!</P>
-  <P>hello!!!</P>
+  
 </body>
+<script src="/udemy/JS/script.js"></script>
 </html>
